--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,28 @@
 @import './common';
 @import './example';
+.list {
+  max-width: 1230px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  gap: 10px;
+  padding-left: 0px;
+  list-style: none;
+}
+.btn.is-hidden{
+  display: none;
+}
+.btn{
+  display: block;
+  align-content: center;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 40px;
+  border-radius: 4px;
+}
+.input{
+  display: block;
+  margin: 30px auto;
+}
+
