--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
-<li id={{id}}>
-    <img src={{images.0.url}} alt={{name}} width="300">
+  <li id='{{id}}'>
+    <img src={{images.0.url}} alt={{name}} width='300' />
     <p>{{name}}</p>
     <p>{{dates.start.localDate}}:{{dates.start.localTime}}</p>
-</li>
+  </li>
 {{/each}}
