--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './common';
 @import './example';
+@import './test';
 .list {
   max-width: 1230px;
   margin: 0 auto;
@@ -9,10 +10,10 @@
   padding-left: 0px;
   list-style: none;
 }
-.btn.is-hidden{
+.btn.is-hidden {
   display: none;
 }
-.btn{
+.btn {
   display: block;
   align-content: center;
   margin-top: 20px;
@@ -21,42 +22,7 @@
   padding: 20px 40px;
   border-radius: 4px;
 }
-.input{
+.input {
   display: block;
   margin: 30px auto;
-}
-.backdrop {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(120, 112, 105, 0.392);
-  position: fixed;
-  top: 0;
-  left: 0;
-  opacity: 0;
-
-  pointer-events: none;
-}
-
-.backdrop.is-open {
-  opacity: 1;
-  pointer-events: all;
-}
-.module {
-  position: absolute;
-  padding: 30px;
-  min-width: 600px;
-  min-height: 400px;
-  background-color: #fff;
-  top: 50%;
-  right: 50%;
-  transform: translate(50%, -50%);
-}
-
-.link-buy {
-  display: inline-block;
-  padding: 10px 20px;
-  border-radius: 4px;
-  text-decoration: none;
-  border: 2px solid tomato;
-  color: black;
 }
